# NeoMyanist

./: .gitignore  CMakeLists.txt  main.cpp  resources.rc
data/: state.json  theme.json
data/themes/: 05lightblue.json  05suzumiya_haruhi1.json
items/anime/: list.json
src/: Background.cpp  Background.h  Categories.cpp  Categories.h  Filters.cpp  Filters.h  ItemInfo.cpp  ItemInfo.h  List.cpp  List.h  Menu.cpp  Menu.h  MyatllDraw.cpp  MyatllDraw.h  PipeClient.cpp  PipeClient.h  Search.cpp  Search.h  TextureLoader.cpp  TextureLoader.h  structs.h
